Moved to JDK11. Minor changes in the debug code, added configuration file for local testing, updated pom for JDK11.